tests/fixtures/invalid/bool_in_int.py
# Cannot use 'in' with Bool and Int
x: bool = True in 1
